--- a/pom.xml
+++ b/pom.xml
@@ -217,8 +217,16 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                </configuration>
+            </plugin>
 
-<!--            <plugin>-->
+            <!--            <plugin>-->
 <!--                <groupId>org.codehaus.mojo</groupId>-->
 <!--                <artifactId>jaxws-maven-plugin</artifactId>-->
 <!--                <version>2.6</version>-->
