--- a/pom.xml
+++ b/pom.xml
@@ -254,6 +254,14 @@
                     <sourceDestDir>${project.build.directory}/generated-sources/</sourceDestDir>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>15</source>
+                    <target>15</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
